# nextferry

./: .env.example  .gitignore  BRANCH_REVIEW.md  CLAUDE.md  FERRY_PREDICTION_README.md  ML_MODEL.md  README.md  index.html  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.toml  script.js  style.css
.github/workflows/: test.yml
api/: ferries.js  kv-helpers.js
api/lib/: example_data.js  kv-helpers.js  predict-sailings.js  (+5 more)
backend/: backfill.py  backtest.py  backtest_model.py  config.py  data_collector.py  database.py  display_processing.py  dock_predictor.py  evaluation.py  fill_predictor.py  generate_mock_data.py  main.py  metrics.py  ml_model.py  ml_predictor.py  next_sailings.py  replay.py  sailing_space.py  serializers.py  utils.py  wsdot_client.py
docs/: model-experiment-proposal.md  plan-interval-width.md  proposal-pipeline-redesign.md
models/: delay_model_meta.joblib  delay_model_q05.joblib  delay_model_q15.joblib  delay_model_q50.joblib  delay_model_q85.joblib  delay_model_q95.joblib  delay_model_v2.joblib
proposals/: current-vessel-load-feature.md  data-flow-improvements.md  opposite-vessel-feature.md  remove-cached-delays.md  replay-scenarios.md  sailing-canonical-ids.md
reports/: at_dock_baseline.md  at_dock_gbt.md  baseline_2026-03-22.md  eta_backtest_2026-04-04.md  eta_deep_dive_2026-04-04.md  eta_deep_dive_2026-04-05.md  exp02-deeper-trees.md  exp03-vessel-id.md  exp04-vessel-speed.md  exp05-delay-x-horizon.md  exp06-drop-is-peak.md  exp07-hour-numeric.md  exp08-arriving-terminal.md  exp09-slow-and-deep.md  exp10-very-slow.md  exp11-shallow-many.md  exp12-best-plus-speed.md  exp13-kitchen-sink.md  exp14-delay-squared.md  exp15-month.md  exp16-weekend.md  exp17-weekend-plus-month.md  exp18-minutes-since-midnight.md  exp19-min-samples-leaf.md  exp20-wider-quantiles.md  exp21-l2-median.md  exp22-q40-asymmetric.md  exp23-q35.md  exp24-q33-optimal.md  exp25-q33-more-iters.md  exp26-l2-reg.md  exp27-rebaseline.md  exp28-tighter-bounds.md  exp29-drop-turnaround.md  exp30-drop-fullness.md  exp31-deeper-trees.md  exp32-consecutive-late.md  exp33-ngboost.md  exp34-q30.md  exp35-q28.md  (+8 more)
scripts/: backtest_chain.py  backtest_dock_value.py  backtest_eta.py  backtest_eta_deep.py  capture_scenario.py  migrate_collected_at_tz.py
static/: alerts.js  manifest.json  style.css  sw.js
templates/: error_fragment.html  history_tab_fragment.html  index.html  map_fragment.html  metrics_tab_fragment.html  next_sailings_fragment.html  predictions_tab_fragment.html  report_prediction_error.html  sailings_tab_fragment.html
tests/: conftest.py  test_display_processing.py  test_evaluation.py  test_integration.py  test_main.py  test_metrics.py  test_ml_predictor.py  test_next_sailings.py  test_prediction_reporting.py  test_replay_delay_cache.py  test_serializers.py  test_utils.py  test_wsdot_client.py
(+13 files in other folders)
